--- a/GamingFun/theme/src/blocks/main/personalRoom/subscribe/subscribtionForm/subscribtionFormController/__dropdown.scss
+++ b/GamingFun/theme/src/blocks/main/personalRoom/subscribe/subscribtionForm/subscribtionFormController/__dropdown.scss
@@ -1,17 +1,18 @@
 .subscribtionFormController__dropdown {
 	@extend .registerFormController__input;
 	background-color: $gray $i;
-	padding-top: 3% !important;
+	padding-top: 3.5% !important;
 	border: 0 !important;
 	border-radius: 0 !important;
+	&, & .default.text {
+		color: $lightGray $i;
+	}
 	& i.dropdown.icon {
 		font-size: 50px !important;
 		padding: 0 !important;
 		top: 30px !important;
 	}
-	
 	font-size: (12em / 16);
-	color: $lightGray $i;
 	box-shadow: 0 0 10px $shadow $i;
 	transition: box-shadow 0.5s, background-color 0.5s, color 0.5s $i;
 	@include placehodler-color-focus($gray $i);
