--- a/GamingFun/theme/src/blocks/main/userPanel/logInFrom/logInFormButtons/logInFormButtons.scss
+++ b/GamingFun/theme/src/blocks/main/userPanel/logInFrom/logInFormButtons/logInFormButtons.scss
@@ -1,6 +1,6 @@
 .logInFormButtons {
-	position: relative;
-	@extend .prettyTopMargin;
+	@extend %relative;
+	@extend %largeTopMargin;
 	@include susy-clearfix;
 }
 
