--- a/GamingFun/theme/src/blocks/main/userPanel/server/__status.scss
+++ b/GamingFun/theme/src/blocks/main/userPanel/server/__status.scss
@@ -12,6 +12,11 @@
 		top: -28px;
 		left: 45%;
 	}
+	&::after {
+		@include breakpoint($xs) {
+			left: 3px;
+		}
+	}
 }
 
 .server__status--minecraft {
