--- a/GamingFun/theme/src/blocks/main/userPanel/server/__status.scss
+++ b/GamingFun/theme/src/blocks/main/userPanel/server/__status.scss
@@ -27,10 +27,10 @@
 	} 
 
 }
-.server__status--samp {
-	background-color: $brown !important;
-	& > .bar {
-		background-color: $orange !important;
-	} 
+// .server__status--samp {
+// 	background-color: $brown !important;
+// 	& > .bar {
+// 		background-color: $orange !important;
+// 	} 
 
-}
+// }
