--- a/GamingFun/theme/src/blocks/header/brand/brand.scss
+++ b/GamingFun/theme/src/blocks/header/brand/brand.scss
@@ -10,11 +10,11 @@
 		top: 90px;	
 	}	
 }
-.brand--samp {
-	top: 64px;
-	@include breakpoint($xs) {
-		top: 145px;	
-	}	
-}
+// .brand--samp {
+// 	top: 64px;
+// 	@include breakpoint($xs) {
+// 		top: 145px;	
+// 	}	
+// }
 
 @import '__name.scss';
