--- a/GamingFun/theme/src/blocks/mainPage/mainPageHeader/mainPageNav/mainPageNavItem/mainPageNavItem.scss
+++ b/GamingFun/theme/src/blocks/mainPage/mainPageHeader/mainPageNav/mainPageNavItem/mainPageNavItem.scss
@@ -5,18 +5,19 @@
 	}
 }
 
-.mainPageNavItem--samp {
-	max-width: 370px;
-	margin-top: (400% / 4096 * 100);
+// .mainPageNavItem--samp {
+// 	max-width: 370px;
+// 	margin-top: (400% / 4096 * 100);
 
-}
+// }
 
 .mainPageNavItem--minecraft {
 	max-width: 460px;
-	margin:  -(70% / 4096 * 100) 0 0 calc(100% - 460px);
-	@include breakpoint($xs) {
-		margin: (700% / 4096 * 100) auto 0;
+	// margin:  -(70% / 4096 * 100) 0 0 calc(100% - 460px);
+	margin: 30% auto 0;
+	// @include breakpoint($xs) {
+	// 	margin: (700% / 4096 * 100) auto 0;
 
-	}
+	// }
 }
 @import '__img.scss';
