I've made a bash script for handling adding and removing user from whitelist and added django-cron app.

--- a/GamingFun/theme/src/blocks/custom/custom.scss
+++ b/GamingFun/theme/src/blocks/custom/custom.scss
@@ -22,6 +22,7 @@ $i: !important;
 @import 'short_hand_classes/perspective.scss';
 @import 'short_hand_classes/display.scss';
 @import 'short_hand_classes/position.scss';
+@import 'short_hand_classes/image.scss';
 
 
 // Custom styles
