--- a/GamingFun/theme/src/blocks/header/brand/brand.scss
+++ b/GamingFun/theme/src/blocks/header/brand/brand.scss
@@ -6,15 +6,13 @@
 
 .brand--minecraft {
 	top: 80px;
+	@include breakpoint($sm) {
+		top: 50px;
+	} 
 	@include breakpoint($xxs) {
 		top: 90px;	
 	}	
 }
-// .brand--samp {
-// 	top: 64px;
-// 	@include breakpoint($xs) {
-// 		top: 145px;	
-// 	}	
-// }
+
 
 @import '__name.scss';
