--- a/GamingFun/theme/src/blocks/header/figure/__img.scss
+++ b/GamingFun/theme/src/blocks/header/figure/__img.scss
@@ -1,33 +1,25 @@
 .figure__img {
 	@include responsive-background;
 	width: 100%;
-	// &--steve {
-	// 	padding-bottom: (249% / 187 * 100);
-	// 	background-image: url('../img/minecraft/steve.png');			
-	// }
-	// &--squid {
-	// 	padding-bottom: (171% / 139 * 100);
-	// 	background-image: url('../img/minecraft/squid.png');				
-	// }
+	z-index: 4;
 	&--steve_with_bow {
-		background-image: url('../img/minecraft/steve_with_bow.png');
-		padding-bottom: (225% / 299 * 100);
-		// transform: rotate(-10deg);
+		background-image: url('../img/minecraft/steve_with_bow_color.png');
+		padding-bottom: (239% / 265 * 100);
 	}
 	&--chicken {
-		background-image: url('../img/minecraft/chicken.png');
+		background-image: url('../img/minecraft/chicken_color.png');
 		padding-bottom: (153% / 127 * 100);		
 	}
-	&--car {
-		padding-bottom: (285% / 441 * 100);
-		background-image: url('../img/samp/car.png');	
-	}
-	&--helicopter {
-		padding-bottom: (141% / 195 * 100);
-		background-image: url('../img/samp/helicopter.png');
-	}
-	&--man {
-		padding-bottom: (253% / 160 * 100);
-		background-image: url('../img/samp/man.png');	
-	}
+	// &--car {
+	// 	padding-bottom: (285% / 441 * 100);
+	// 	background-image: url('../img/samp/car.png');	
+	// }
+	// &--helicopter {
+	// 	padding-bottom: (141% / 195 * 100);
+	// 	background-image: url('../img/samp/helicopter.png');
+	// }
+	// &--man {
+	// 	padding-bottom: (253% / 160 * 100);
+	// 	background-image: url('../img/samp/man.png');	
+	// }
 }
