--- a/GamingFun/theme/src/blocks/main/contentWrapper.scss
+++ b/GamingFun/theme/src/blocks/main/contentWrapper.scss
@@ -5,15 +5,18 @@
 		@include span(9);
 		padding: 75px 0 0 20%;
 		@include breakpoint($lg) {
-			padding-left: 30%;
+			padding-right: 10%;
 		}
-		// @extend .defaultTopPadding;
+		@include breakpoint(1400px) {
+			padding-left: 30%;
+			padding-right: 0;
+		}
 		@include breakpoint($md) {
 			@include span(8);
 		}
 		@include breakpoint($sm) {
 			@include span(7);
-			padding-left: 15%;
+			padding-left: 10%;
 		}
 		@include breakpoint($xs) {
 			width: 100% !important;
