--- a/GamingFun/theme/src/blocks/custom/config/colors.scss
+++ b/GamingFun/theme/src/blocks/custom/config/colors.scss
@@ -1,13 +1,15 @@
 $lightGray: #ececec;
 $darkenLightGray: #e0e0e0;
 $darkGray:  #1c1b1b;
+$white: #fefeff;
+$gray: #9c9c9c;
+$shadow: rgba(0, 0, 0, .6);
+
 // $baseColor: '#000';
 $darkGreen: #185c47;
 $green: #56cca6;
 $paleGreen: #269170;
 $darkRed: #6c4040;
-$gray: #9c9c9c;
-$shadow: rgba(0, 0, 0, .6);
 $darkBrown: #231001;
 $darkBlue: #0c1e33;
 $blue: #183c66;
